# Asteroids

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README  SFML  cmake_install.cmake  frag  geom  geom.old  lol  tags  vert
lib/glew-1.5.6/: glew.pc
lib/glew-1.5.6/lib/: libGLEW.so.1.5.6
lib/glew-1.5.6/src/: glew.pic_o
src/: .CMakeLists.txt.swp  2dadventure.cpp  2dadventure.h  CMakeLists.txt  Makefile  asteroids.cpp  asteroids.h  blocks.cpp  blocks.h  cmake_install.cmake  const.h  game.cpp  game.h  main.cpp  menu.cpp  menu.h  old.cpp  old.h  test.cpp  test.h  testing.cpp  testing.h  util.cpp  util.h  vec.h
